#
# Copyright 2022 NXP
# SPDX-License-Identifier: Apache-2.0
#

ADD_SUBDIRECTORY(sa_qi_transmitter_auth)

IF(SSS_HAVE_SE05X_AUTH_AESKEY OR SSS_HAVE_SE05X_AUTH_AESKEY_PLATFSCP03)
    ADD_SUBDIRECTORY(sa_qi_provisioning)
ENDIF()

IF(SSS_HAVE_HOSTCRYPTO_MBEDTLS AND NOT (SSS_HAVE_SE05X_AUTH_AESKEY OR SSS_HAVE_SE05X_AUTH_AESKEY_PLATFSCP03))
    ADD_SUBDIRECTORY(sa_qi_auth)
ENDIF()

IF(NXPInternal)
    ADD_SUBDIRECTORY(tst)
ENDIF()
